agregue estilo al menu y elegi la nueva fuente

--- a/index.html
+++ b/index.html
@@ -7,209 +7,211 @@
     <title>Joel | Web Developer</title>
     <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/normalice.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Gideon+Roman&family=Montserrat:wght@300&family=Prompt:ital,wght@1,200&family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Montserrat:wght@300&,wght@1,200&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Gideon+Roman&family=Montserrat:wght@300&,wght@1,200&display=swap" rel="stylesheet">
 </head>
-<body>
-    <header class="navegacion">
-        <h1 class="titulo-principal"><b>※</b> Joel Dario Muñoz</h1><nav>
-            <ul>
-                <li>
-                    <a href="#presentacion">Sobre mí</a>
-                </li>
-                <li>
-                    <a href="#skills">Skills</a>
-                </li>
-                <li>
-                    <a href="#hobbies">Hobbies</a>
-                </li>
-                <li>
-                    <a href="#formacion">Formación</a>
-                </li>
-                <li>
-                    <a href="#experiencia">Proyectos</a>
-                </li>
-                <li>
-                    <a href="#contacto">Contácto</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main class="principal">
-        <section id="presentacion" class="presentacion">
-            <div>
-                <div class="presentacion-texto">
-                    <div class="presentacion-texto-interior">
-                        <h2><div class="nombre">Joel Dario Muñoz</div> web developer</h2>
-                        <ul>
-                            <li>
-                                <a href="https://github.com/" target="_blank">GitHub↗</a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/joel-dario-mu%C3%B1oz-68b173180/" target="_blank">LinkedIn↗</a>
-                            </li>
-                            <li>
-                                <a href="images/CVJoelMuñoz.png" target="_blank">CV↗</a>
-                            </li>
-                        </ul>
+<body class="body">
+    <div class="container">
+        <header class="menu">
+            <h1 class="nombre-menu">Joel</h1><nav>
+                <ul class="lista-menu">
+                    <li class="item-menu">
+                        <a href="#presentacion" class="link-menu">Sobre mí</a>
+                    </li>
+                    <li class="item-menu">
+                        <a href="#skills" class="link-menu">Skills</a>
+                    </li>
+                    <li class="item-menu">
+                        <a href="#hobbies" class="link-menu">Hobbies</a>
+                    </li>
+                    <li  class="item-menu">
+                        <a href="#formacion" class="link-menu">Formación</a>
+                    </li>
+                    <li class="item-menu">
+                        <a href="#experiencia" class="link-menu">Proyectos</a>
+                    </li>
+                    <li class="item-menu">
+                        <a href="#contacto" class="link-menu">Contácto</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main class="main">
+            <section id="presentacion" class="presentacion">
+                <div>
+                    <div class="presentacion-texto">
+                        <div class="presentacion-texto-interior">
+                            <h2><div class="nombre">Joel Dario Muñoz</div> web developer</h2>
+                            <ul>
+                                <li>
+                                    <a href="https://github.com/" target="_blank">GitHub↗</a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/in/joel-dario-mu%C3%B1oz-68b173180/" target="_blank">LinkedIn↗</a>
+                                </li>
+                                <li>
+                                    <a href="images/CVJoelMuñoz.png" target="_blank">CV↗</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div><img src="images/favicon.jpg" alt="rostro en primer plano">
+                </div>
+                <div class="sobre-mi">
+                    <h3>Sobre mí</h3>
+                    <p>Soy desarrollador web full stack. Poseo conocimientos en HTML5, CSS3 con Tailwind o nativo y JavaScript para el Front End. En el Back End utilizo PHP nativo y MySQL para el manejo de bases de datos. Mi entorno de desarrollo es Linux preferentemente.</p>
+                    <p>Mi intención es poner en práctica todo lo aprendido y seguir profundizando mis conocimientos en las distintas tecnologías para brindar soluciones ágiles y óptimas a cualquier necesidad en la web.</p>
+                </div>
+            </section>
+            <section id="skills" class="skills">
+                <h3 class="titulo-seccion">Skills</h3>
+                <ul>
+                    <li>
+                        <img src="images/iconos/html5Icono.png" alt="logo HTML5">
+                        <h4>HTML5</h4>
+                    </li>
+                    <li>
+                        <img src="images/iconos/css3Icono.png" alt="logo CSS3">
+                        <h4>CSS</h4>
+                    </li>
+                    <li>
+                        <img src="images/iconos/JSIcono.png" alt="logo JS">
+                        <h4>JavaScript</h4>
+                    </li>
+                    <li>
+                        <img src="images/iconos/phpIcono.png" alt="logo PHP">
+                        <h4>PHP</h4>
+                    </li>
+                    <li>
+                        <img src="images/iconos/mysqlIcono.png" alt="logo mysql">
+                        <h4>My/SQL</h4>
+                    </li>
+                    <li>
+                        <img src="images/iconos/githubIcono.png" alt="logo GitHub">
+                        <h4>GitHub</h4>
+                    </li>
+                    <li>
+                        <img src="images/iconos/linuxIcono.png" alt="logo Linux">
+                        <h4>Linux</h4>
+                    </li>
+                </ul>
+            </section>
+            <section id="experiencia" class="experiencia">
+                <h3 class="titulo-seccion">Experiencia profesional</h3>
+                <ul>
+                    <li>
+                        <a href="https://jdario9912.github.io/Juego-del-ahoracado-Alura/" target="_blank">
+                            <img src="images/ahorcado.png" alt="juego ahorcado">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://jdario9912.github.io/Primer-challenge-Alura-Latam/" target="_blanck">
+                            <img src="images/codigoSecreto.png" alt="juego codigo secreto">
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <section id="formacion" class="formacion">
+                <h3 class="titulo-seccion">Formación IT</h3>
+                <ul>
+                    <div class="fila-1">
+                        <li>
+                            <a href="https://www.youtube.com/c/Alura" target="_blank">
+                                <img src="images/iconos/alura.jpg" alt="logo alura">
+                                <h4>Alura</h4>
+                                <p>Programador Web Full Stack</p>
+                                <p>ONE - Oracle Next Eduducation</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/c/CodersFree" target="_blank">
+                                <img src="images/iconos/codersFree.jpg" alt="logo coders free">
+                                <h4>Coders Free</h4>
+                                <p>Tailwind CSS3</p>
+                                <p>Autodidacta</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/c/DorianDesings" target="_blank" rel="noopener noreferrer">
+                                <img src="images/iconos/dorianDesings.jpg" alt="logo dorian">
+                                <h4>Dorian Desings</h4>
+                                <p>HTML5</p>
+                                <p>Autodidacta</p>
+                            </a>
+                        </li>
                     </div>
-                </div><img src="images/favicon.jpg" alt="rostro en primer plano">
-            </div>
-            <div class="sobre-mi">
-                <h3>Sobre mí</h3>
-                <p>Soy desarrollador web full stack. Poseo conocimientos en HTML5, CSS3 con Tailwind o nativo y JavaScript para el Front End. En el Back End utilizo PHP nativo y MySQL para el manejo de bases de datos. Mi entorno de desarrollo es Linux preferentemente.</p>
-                <p>Mi intención es poner en práctica todo lo aprendido y seguir profundizando mis conocimientos en las distintas tecnologías para brindar soluciones ágiles y óptimas a cualquier necesidad en la web.</p>
-            </div>
-        </section>
-        <section id="skills" class="skills">
-            <h3 class="titulo-seccion">Skills</h3>
-            <ul>
-                <li>
-                    <img src="images/iconos/html5Icono.png" alt="logo HTML5">
-                    <h4>HTML5</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/css3Icono.png" alt="logo CSS3">
-                    <h4>CSS</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/JSIcono.png" alt="logo JS">
-                    <h4>JavaScript</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/phpIcono.png" alt="logo PHP">
-                    <h4>PHP</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/mysqlIcono.png" alt="logo mysql">
-                    <h4>My/SQL</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/githubIcono.png" alt="logo GitHub">
-                    <h4>GitHub</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/linuxIcono.png" alt="logo Linux">
-                    <h4>Linux</h4>
-                </li>
-            </ul>
-        </section>
-        <section id="experiencia" class="experiencia">
-            <h3 class="titulo-seccion">Experiencia profesional</h3>
-            <ul>
-                <li>
-                    <a href="https://jdario9912.github.io/Juego-del-ahoracado-Alura/" target="_blank">
-                        <img src="images/ahorcado.png" alt="juego ahorcado">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://jdario9912.github.io/Primer-challenge-Alura-Latam/" target="_blanck">
-                        <img src="images/codigoSecreto.png" alt="juego codigo secreto">
-                    </a>
-                </li>
-            </ul>
-        </section>
-        <section id="formacion" class="formacion">
-            <h3 class="titulo-seccion">Formación IT</h3>
-            <ul>
-                <div class="fila-1">
+                    <div class="fila-2">
+                        <li>
+                            <a href="https://www.youtube.com/c/pildorasinformaticas" target="_blank">
+                                <img src="images/iconos/pildorasInformaticas.jpg" alt="logo pildoras informaticas">
+                                <h4>Pildoras Informáticas</h4>
+                                <p>PHP/MySQL</p>
+                                <p>Autodidacta</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/c/ErnestoP%C3%A9rezM" target="_blank">
+                                <img src="images/iconos/wikipediaErnesto.jpg" alt="logo wikipedia de Ernesto">
+                                <h4>Wikipedia de Ernesto</h4>
+                                <p>Java inicial</p>
+                                <p>Autodidacta</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/c/Freecodecamp" target="_blank">
+                                <img src="images/iconos/freeCodeCamp.jpg" alt="logo free code camp">
+                                <h4>Free Code Camp</h4>
+                                <p>Java Script inicial</p>
+                                <p>Autodidacta</p>
+                            </a>
+                        </li>
+                    </div>
+                </ul>
+            </section>
+            <section id="hobbies" class="hobbies">
+                <h3 class="titulo-seccion">Hobbies</h3>
+                <ul>
                     <li>
-                        <a href="https://www.youtube.com/c/Alura" target="_blank">
-                            <img src="images/iconos/alura.jpg" alt="logo alura">
-                            <h4>Alura</h4>
-                            <p>Programador Web Full Stack</p>
-                            <p>ONE - Oracle Next Eduducation</p>
-                        </a>
+                        <img src="images/iconos/guitarplayer.svg" alt="tocar guitarra">
+                        <h4>Tocar guitarra</h4>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/c/CodersFree" target="_blank">
-                            <img src="images/iconos/codersFree.jpg" alt="logo coders free">
-                            <h4>Coders Free</h4>
-                            <p>Tailwind CSS3</p>
-                            <p>Autodidacta</p>
-                        </a>
+                        <img src="images/iconos/escucharMusica.svg" alt="escuchar musica">
+                        <h4>Escuchar música</h4> 
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/c/DorianDesings" target="_blank" rel="noopener noreferrer">
-                            <img src="images/iconos/dorianDesings.jpg" alt="logo dorian">
-                            <h4>Dorian Desings</h4>
-                            <p>HTML5</p>
-                            <p>Autodidacta</p>
-                        </a>
-                    </li>
-                </div>
-                <div class="fila-2">
-                    <li>
-                        <a href="https://www.youtube.com/c/pildorasinformaticas" target="_blank">
-                            <img src="images/iconos/pildorasInformaticas.jpg" alt="logo pildoras informaticas">
-                            <h4>Pildoras Informáticas</h4>
-                            <p>PHP/MySQL</p>
-                            <p>Autodidacta</p>
-                        </a>
+                        <img src="images/iconos/componerMusica.svg" alt="componer música">
+                        <h4>Hacer música</h4>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/c/ErnestoP%C3%A9rezM" target="_blank">
-                            <img src="images/iconos/wikipediaErnesto.jpg" alt="logo wikipedia de Ernesto">
-                            <h4>Wikipedia de Ernesto</h4>
-                            <p>Java inicial</p>
-                            <p>Autodidacta</p>
-                        </a>
+                        <img src="images/iconos/bici.svg" alt="bici">
+                        <h4>Andar en bici</h4>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/c/Freecodecamp" target="_blank">
-                            <img src="images/iconos/freeCodeCamp.jpg" alt="logo free code camp">
-                            <h4>Free Code Camp</h4>
-                            <p>Java Script inicial</p>
-                            <p>Autodidacta</p>
-                        </a>
+                        <img src="images/iconos/leer.svg" alt="leer">
+                        <h4>Leer</h4>
                     </li>
-                </div>
-            </ul>
-        </section>
-        <section id="hobbies" class="hobbies">
-            <h3 class="titulo-seccion">Hobbies</h3>
-            <ul>
-                <li>
-                    <img src="images/iconos/guitarplayer.svg" alt="tocar guitarra">
-                    <h4>Tocar guitarra</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/escucharMusica.svg" alt="escuchar musica">
-                    <h4>Escuchar música</h4> 
-                </li>
-                <li>
-                    <img src="images/iconos/componerMusica.svg" alt="componer música">
-                    <h4>Hacer música</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/bici.svg" alt="bici">
-                    <h4>Andar en bici</h4>
-                </li>
-                <li>
-                    <img src="images/iconos/leer.svg" alt="leer">
-                    <h4>Leer</h4>
-                </li>
-            </ul>
-        </section>
-        <section id="contacto" class="contacto">
-            <h3 class="titulo-seccion">Contacto</h3>
-            <p>Llená el formulario, te respondo en breve</p>
-            <form>
-                <label for="nombre">Nombre</label>
-                <input type="text" id="nombre">
-                <label for="email">E-mail</label>
-                <input type="text" id="email">
-                <label for="asunto">Asunto</label>
-                <input type="text" id="asunto">
-                <label for="mensaje">Mensaje</label>
-                <textarea name="" id="mensaje" cols="30" rows="10"></textarea>
-                <button type="submit">Enviar</button>
-            </form>
-        </section>
-    </main>
-    <footer class="footer">
-        <p>&#169 Creado por Joel Dario Muñoz <time>2022</time></p>
-    </footer>
+                </ul>
+            </section>
+            <section id="contacto" class="contacto">
+                <h3 class="titulo-seccion">Contacto</h3>
+                <p>Llená el formulario, te respondo en breve</p>
+                <form>
+                    <label for="nombre">Nombre</label>
+                    <input type="text" id="nombre">
+                    <label for="email">E-mail</label>
+                    <input type="text" id="email">
+                    <label for="asunto">Asunto</label>
+                    <input type="text" id="asunto">
+                    <label for="mensaje">Mensaje</label>
+                    <textarea name="" id="mensaje" cols="30" rows="10"></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
+            </section>
+        </main>
+        <footer class="footer">
+            <p>&#169 Creado por Joel Dario Muñoz <time>2022</time></p>
+        </footer>
+    </div>
 </body>
 </html>
