agregue estilo a la presentacion

--- a/index.html
+++ b/index.html
@@ -39,30 +39,27 @@
         </header>
         <main class="main">
             <section id="presentacion" class="presentacion">
-                <div>
-                    <div class="presentacion-texto">
-                        <div class="presentacion-texto-interior">
-                            <h2><div class="nombre">Joel Dario Muñoz</div> web developer</h2>
-                            <ul>
-                                <li>
-                                    <a href="https://github.com/" target="_blank">GitHub↗</a>
-                                </li>
-                                <li>
-                                    <a href="https://www.linkedin.com/in/joel-dario-mu%C3%B1oz-68b173180/" target="_blank">LinkedIn↗</a>
-                                </li>
-                                <li>
-                                    <a href="images/CVJoelMuñoz.png" target="_blank">CV↗</a>
-                                </li>
-                            </ul>
+                <img class="img-bg-presentacion" src="images/bg-presentacion1.jpg" alt="teclado notebook">
+                <div class="pre-box-main">
+                        <div class="pre-box-1">
+                            <div class="contorno-favicon"></div>
+                            <img class="favicon" src="images/favicon.jpg" alt="rostro primer plano">
+                            <div class="pre-info">
+                                <div class="pre-contenido">
+                                    <h2 class="pre-nombre">Joel Muñoz</h2>
+                                    <p class="pre-oficio">develop full stack</p>
+                                    <img class="pre-icon" src="images/iconos/github.png">
+                                    <img class="pre-icon" src="images/iconos/linkedin.png">
+                                </div>
+                            </div>
                         </div>
-                    </div><img src="images/favicon.jpg" alt="rostro en primer plano">
                 </div>
+            </section>
                 <div class="sobre-mi">
                     <h3>Sobre mí</h3>
                     <p>Soy desarrollador web full stack. Poseo conocimientos en HTML5, CSS3 con Tailwind o nativo y JavaScript para el Front End. En el Back End utilizo PHP nativo y MySQL para el manejo de bases de datos. Mi entorno de desarrollo es Linux preferentemente.</p>
                     <p>Mi intención es poner en práctica todo lo aprendido y seguir profundizando mis conocimientos en las distintas tecnologías para brindar soluciones ágiles y óptimas a cualquier necesidad en la web.</p>
                 </div>
-            </section>
             <section id="skills" class="skills">
                 <h3 class="titulo-seccion">Skills</h3>
                 <ul>
