--- a/index.html
+++ b/index.html
@@ -6,53 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joel | Web Developer</title>
     <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/normalice.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Gideon+Roman&family=Montserrat:wght@300&family=Prompt:ital,wght@1,200&family=Righteous&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/normalice.css">
+    <link rel="stylesheet" href="assets/css/container.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/menu/menu-item.css">
+    <link rel="stylesheet" href="assets/css/menu/menu-link.css">
+    <link rel="stylesheet" href="assets/css/menu/menu-lista.css">
+    <link rel="stylesheet" href="assets/css/menu/menu-nombre.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="body">
     <div class="container">
         <header class="menu">
-            <h1 class="nombre-menu">Joel</h1><nav>
-                <ul class="lista-menu">
-                    <li class="item-menu">
-                        <a href="#presentacion" class="link-menu">Sobre mí</a>
+            <h1 class="menu__nombre">Joel</h1><nav>
+                <ul class="menu__lista">
+                    <li class="menu__item">
+                        <a href="#presentacion" class="menu__link">Sobre mí</a>
                     </li>
-                    <li class="item-menu">
-                        <a href="#skills" class="link-menu">Skills</a>
+                    <li class="menu__item">
+                        <a href="#skills" class="menu__link">Skills</a>
                     </li>
-                    <li class="item-menu">
-                        <a href="#hobbies" class="link-menu">Hobbies</a>
+                    <li class="menu__item">
+                        <a href="#hobbies" class="menu__link">Hobbies</a>
                     </li>
-                    <li  class="item-menu">
-                        <a href="#formacion" class="link-menu">Formación</a>
+                    <li  class="menu__item">
+                        <a href="#formacion" class="menu__link">Formación</a>
                     </li>
-                    <li class="item-menu">
-                        <a href="#experiencia" class="link-menu">Proyectos</a>
+                    <li class="menu__item">
+                        <a href="#experiencia" class="menu__link">Proyectos</a>
                     </li>
-                    <li class="item-menu">
-                        <a href="#contacto" class="link-menu">Contácto</a>
+                    <li class="menu__item">
+                        <a href="#contacto" class="menu__link">Contácto</a>
                     </li>
                 </ul>
             </nav>
         </header>
-        <main class="main">
+        <main>
             <section id="presentacion" class="presentacion">
-                <img class="img-bg-presentacion" src="images/bg-presentacion1.jpg" alt="teclado notebook">
-                <div class="pre-box-main">
-                        <div class="pre-box-1">
-                            <div class="contorno-favicon"></div>
-                            <img class="favicon" src="images/favicon.jpg" alt="rostro primer plano">
-                            <div class="pre-info">
-                                <div class="pre-contenido">
-                                    <h2 class="pre-nombre">Joel Muñoz</h2>
-                                    <p class="pre-oficio">develop full stack</p>
-                                    <img class="pre-icon" src="images/iconos/github.png">
-                                    <img class="pre-icon" src="images/iconos/linkedin.png">
-                                </div>
-                            </div>
+                <img class="presentacion__imagen" src="images/bg-presentacion1.jpg" alt="teclado notebook">
+                <div class="presentacion__box">
+                    <div class="box__contorno"></div>
+                    <img class="box__favicon" src="images/favicon.jpg" alt="rostro primer plano">
+                    <div class="box__info">
+                        <div class="info__contenido">
+                            <h2 class="contenido__nombre">Joel Muñoz</h2>
+                            <p class="contenido__oficio">develop full stack</p>
+                            <ul class="contenido__lista">
+                                <li class="contenido__item">
+                                    <div class="contenido__icon">
+                                        <a href="" class="contenido__link">git</a>
+                                    </div>
+                                </li>
+                                <li class="contenido__item">
+                                    <div class="contenido__icon">
+                                        <a href="" class="contenido__link">linkedin</a>
+                                    </div>
+                                </li>
+                            </ul>
+                            <img class="pre-icon" src="images/iconos/github.png">
+                            <img class="pre-icon" src="images/iconos/linkedin.png">
                         </div>
+                    </div>
                 </div>
             </section>
                 <div class="sobre-mi">
