di estilo a la presentacion

--- a/index.html
+++ b/index.html
@@ -16,36 +16,39 @@
     <link rel="stylesheet" href="assets/css/menu/menu-lista.css">
     <link rel="stylesheet" href="assets/css/menu/menu-nombre.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/presentacion.css">
+    <link rel="stylesheet" href="assets/css/presentacion/presentacion-imagen.css">
+    <link rel="stylesheet" href="assets/css/presentacion/presentacion-box.css">
 </head>
 <body class="body">
     <div class="container">
         <header class="menu">
             <h1 class="menu__nombre">Joel</h1><nav>
-                <ul class="menu__lista">
-                    <li class="menu__item">
-                        <a href="#presentacion" class="menu__link">Sobre mí</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#skills" class="menu__link">Skills</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#hobbies" class="menu__link">Hobbies</a>
-                    </li>
-                    <li  class="menu__item">
-                        <a href="#formacion" class="menu__link">Formación</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#experiencia" class="menu__link">Proyectos</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#contacto" class="menu__link">Contácto</a>
-                    </li>
-                </ul>
+            <ul class="menu__lista">
+                <li class="menu__item">
+                    <a href="#presentacion" class="menu__link">Sobre mí</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#skills" class="menu__link">Skills</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#hobbies" class="menu__link">Hobbies</a>
+                </li>
+                <li  class="menu__item">
+                    <a href="#formacion" class="menu__link">Formación</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#experiencia" class="menu__link">Proyectos</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#contacto" class="menu__link">Contácto</a>
+                </li>
+            </ul>
             </nav>
         </header>
         <main>
             <section id="presentacion" class="presentacion">
-                <img class="presentacion__imagen" src="images/bg-presentacion1.jpg" alt="teclado notebook">
+                <div class="presentacion__imagen"></div>
                 <div class="presentacion__box">
                     <div class="box__contorno"></div>
                     <img class="box__favicon" src="images/favicon.jpg" alt="rostro primer plano">
@@ -70,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            <!-- </section>
                 <div class="sobre-mi">
                     <h3>Sobre mí</h3>
                     <p>Soy desarrollador web full stack. Poseo conocimientos en HTML5, CSS3 con Tailwind o nativo y JavaScript para el Front End. En el Back End utilizo PHP nativo y MySQL para el manejo de bases de datos. Mi entorno de desarrollo es Linux preferentemente.</p>
@@ -220,7 +223,7 @@
                     <textarea name="" id="mensaje" cols="30" rows="10"></textarea>
                     <button type="submit">Enviar</button>
                 </form>
-            </section>
+            </section> -->
         </main>
         <footer class="footer">
             <p>&#169 Creado por Joel Dario Muñoz <time>2022</time></p>
