--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
     <link rel="stylesheet" href="assets/css/presentacion/box/contenido/contenido-link.css">
     <link rel="stylesheet" href="assets/css/presentacion/box/contenido/contenido-icon.css">
     <link rel="stylesheet" href="assets/css/sobre-mi.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-btn-descargar.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-em.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-icon-info.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-info-personal.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-item.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-lista.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-parrafo.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-tabla.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-td.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-texto.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-titulo-info-personal.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-titulo-intereses.css">
+    <link rel="stylesheet" href="assets/css/sobre-mi/sobre-mi-tr.css">
 </head>
 <body class="body">
     <div class="container">
@@ -89,13 +102,12 @@
             </section>
             <section class="sobre-mi">
                 <h3 class="sobre-mi__titulo">Sobre mí</h3>
+                <div class="sobre-mi__icon-info"></div>
                 <div class="sobre-mi__texto">
-                    <div class="sobre-mi__icon-informacion"></div>
                     <p class="sobre-mi__parrafo"> <em class="sobre-mi__em">Hola! Mi nombre es Joel Dario Muñoz.</em> Soy desarrollador web full stack. Poseo conocimientos en HTML5, CSS3 con Tailwind o nativo y JavaScript para el Front End. En el Back End utilizo PHP nativo y MySQL para el manejo de bases de datos. Mi entorno de desarrollo es Linux preferentemente.</p>
                     <p class="sobre-mi__parrafo">Mi intención es poner en práctica todo lo aprendido y seguir profundizando mis conocimientos en las distintas tecnologías para brindar soluciones ágiles y óptimas a cualquier necesidad en la web.</p>
                 </div>
                 <div class="sobre-mi__info-personal">
-                    <div class="sobre-mi__icon-informacion"></div>
                     <h4 class="sobre-mi__titulo-info-personal">Informacion personal</h4>
                     <table class="sobre-mi__tabla">
                         <tr class="sobre-mi__tr">
@@ -132,7 +144,7 @@
                             <h4>Leer</h4>
                         </li>
                     </ul>
-                    <a href="#" class="sobre-mi__descargar">
+                    <a href="#" class="sobre-mi__btn-descargar">
                         <botton>Descargar CV <div class="sobre-mi__icon-descargar"></div></botton>
                     </a>
                 </div>
